update auto/man created ini files (mame0276)

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -3,6 +3,7 @@ alnattck
 alnchase
 amaztron
 astrocmd
+auslalom
 autorace
 bambball
 bankshot
@@ -40,6 +41,8 @@ digimon
 digimonv2
 digimonv3
 ditto
+drdunk
+dunksunk
 dxfootb
 ebaskb2
 ebball
@@ -59,7 +62,6 @@ elecdet
 eleciq
 epacman2
 epacman2r
-epo_tetr
 esbattle
 esoccer
 estargte
@@ -75,7 +77,6 @@ galaxy2b
 gckong
 gdigdug
 ghalien
-gigapets
 ginv
 ginv1000
 ginv2000
@@ -98,7 +99,6 @@ horseran
 kingman
 lafootb
 lostreas
-nstarfox
 machiman
 maniac
 mbaseb
@@ -128,14 +128,9 @@ pairmtch
 pbmastm
 pbqbert
 phpball
-playmaker
-quizwizc
 racetime
 raisedvl
 rockpin
-rzbatfor
-rzindy500
-rztoshden
 skywriter
 splasfgt
 splitsec
@@ -144,6 +139,7 @@ stackch
 stopthief
 stopthiefp
 subwars
+t3in1sa
 t7in1ss
 talkingbb
 talkingfb
@@ -151,12 +147,12 @@ tama
 tamaang
 tamag2
 tamamot
-tbaskb
 tbreakup
-tc4
 tc7atc
 tcaveman
 tccombat
+tcfball
+tcfballa
 tigarden
 tmbaskb
 tmpacman
@@ -175,7 +171,6 @@ trsrescue
 trthuball
 uboat
 ufombs
-venusdm
 vinvader
 wildfire
 zackman
