--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -88,6 +88,7 @@
 4in1
 4in1boot
 4psimasy
+5acespkr
 5clown
 5clowna
 5clownsp
@@ -1670,6 +1671,7 @@ cadashj1
 cadashjo
 cadashp
 cadashs
+cadashso
 cadashu
 cadashu1
 cafetime
@@ -3338,6 +3340,10 @@ dpc180
 dpc200
 dpc200e
 dphh8630
+dphl
+dphla
+dphljp
+dphlunkb
 dplay
 dpoker
 dps1
@@ -3394,6 +3400,8 @@ drgw3
 drgw3100
 drgw3103
 drgw3105
+drhl
+drhla
 dribling
 driblinga
 driblingam
@@ -3418,6 +3426,8 @@ drtoppel
 drtoppelj
 drtoppelu
 drumsups
+drw80pkr
+drw80wld
 dsaber
 dsabera
 dsaberj
@@ -3861,6 +3871,7 @@ farmer
 fashion
 fashiong
 fashiong2
+fastdrwp
 fastfred
 fastlane
 fatfursp
@@ -4844,6 +4855,7 @@ gnbarich
 gng
 gnga
 gngbl
+gngbla
 gngblita
 gngc
 gngprot
@@ -7167,6 +7179,8 @@ lhzb3sjb
 lhzb4
 lhzb4dhb
 lhzba
+lianhp2
+lianhp3
 liberate
 liberateb
 liberatr
@@ -7185,6 +7199,7 @@ lilprofob
 lindbios
 link
 linkypip
+linndrum
 liquidk
 liquidku
 litelrn
@@ -8122,6 +8137,8 @@ mjmyornt
 mjmyorntr
 mjmyster
 mjmyuniv
+mjmyunivbl
+mjmyunivbl2
 mjmywrld
 mjnanpaa
 mjnanpas
@@ -8132,6 +8149,7 @@ mjnquestb
 mjprivat
 mjreach
 mjreach1
+mjreacha
 mjreachbl
 mjreachp2
 mjschuka
@@ -8611,6 +8629,7 @@ mu10
 mu50
 mugsmash
 multchmp
+multchmp25
 multchmpa
 multchmpk
 multi96
@@ -8988,6 +9007,8 @@ norautpl
 norautpn
 norautra
 norautrh
+norautua
+norautub
 nost
 nostj
 nostk
@@ -10772,9 +10793,11 @@ psionla
 psionlam
 psionlz
 psionlz64
-psionlz64s
 psionp200
+psionp200a
+psionp250
 psionp350
+psionp432
 psionp464
 psionwa
 psionwamx
@@ -11059,6 +11082,7 @@ quizwizc
 qvt102
 qvt102a
 qwak
+qyjdzjp
 qzchikyu
 qzkklgy2
 qzkklogy
@@ -12822,6 +12846,7 @@ sms2paln
 sms4in1
 sms4in1a
 smsbr
+smshilo
 smsj
 smsjoker
 smskr
@@ -13307,6 +13332,7 @@ ssingles
 ssipkr24
 ssipkr30
 ssipkr40
+ssjkrpkr
 sslam
 sslama
 sslamb
@@ -13634,6 +13660,7 @@ suratk
 suratka
 suratkj
 sureshot
+sureshoto
 surfplnt
 surfplnt20
 surfplnt30
@@ -13900,6 +13927,7 @@ tcfballa
 tchess
 tcobra2
 tcobra2u
+tct2p
 tdawg_l1
 tddragon
 tddragon2
@@ -14379,6 +14407,7 @@ todruaga
 todruagao
 todruagas
 toffy
+toffya
 togenkyo
 toggle
 toki
@@ -15200,6 +15229,7 @@ vortex
 votrpss
 votrtnt
 vp111
+vpoker
 vpool
 vr
 vroulet
@@ -15468,6 +15498,7 @@ wivernwg
 wiz
 wizatron
 wizdfire
+wizdfirea
 wizdfireu
 wizt
 wizta
@@ -15644,8 +15675,6 @@ xeviousc
 xexex
 xexexa
 xexexj
-xfiles
-xfilesk
 xiaoao
 xiistag
 xing48
@@ -15711,8 +15740,11 @@ xybots0
 xybots1
 xybotsf
 xybotsg
+xyddzhh
 xymg
+xymga
 xyonix
+xypdk
 y301xl
 y416xl
 y503iir
