--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -4,16 +4,61 @@
 32x_scd
 32xe
 32xj
+386sc
+386sc2c
+386schg
+386sxvhcom
+3b1
+3siud
+486apio
+486ccv
+486igb21
+486wb6a3
+4dmshl3g
+4dmuhl3s
+4nd04a
 500gp
+99bottles
+a1000
+a1000n
+a1200
+a1200n
 a1200xl
 a130xe
+a2000
+a2000n
 a2600
 a2600_pop
 a2600p
+a3000
+a3000n
 a400
+a4000
+a400030
+a400030n
+a4000n
+a4000t
+a4000tn
 a400pal
+a433cc
+a486ap4
+a486isa
+a486sio
+a486sp3
+a486sp3g
+a486sv1
+a486sv2
+a486sv2g
+a500
+a500n
+a500p
+a500pn
 a51mxr3k
 a51mxr3ka
+a51site4
+a51site4a
+a600
+a600n
 a600xl
 a65xe
 a65xea
@@ -22,41 +67,222 @@ a800pal
 a800xe
 a800xl
 a800xlp
+aa3000
+aa3010
+aa3010_de
+aa3020
+aa305
+aa310
+aa4
+aa4000
+aa4101
+aa4201
+aa440
+aa4401
+aa486s
+aa500
+aa5000
+aa5000a
+aa500d
+aa540
+aa680
+abae4
+abah4
+abav4
+abax4
+abc110
+abc310
+abpb4
+abpi4
+abpm4
+abpv4
+abpw4
+accomm
+accommb
+accommi
+accommp
 ace100
 ace1000
+ace2200
+ace500
+acrnsys2
+acrnsys3
+acrnsys3_6809
+acrnsys4
+acrnsys5
+acw443
+adam
+agat7
+agat9
 aiwamcd
 aking
+al486vd
+al520ex
+alacou
+alaleolx
+alator2
 albert
 alg_bios
+alim1217
+alim1419
+alim1429
+alim1489
+alphatan
+alphatp10
+alphatp50
+alphatro
+alphatrob
+alphatron
 am100
+am4
 am64
+amibaby
+amient2
+amient3
+amient4
+amisvpci2
+amisvvlb
+amisvvlb2
+amisvvlb3
+ampro
+anch386s
+aoap43
+aovi15g
+aplannb
+aplanst
 aplarail
 aplatoon
+aplsbon
+aplscar
 apple2
+apple2e
+apple2ede
+apple2ee
+apple2eede
+apple2eefr
+apple2ees
+apple2eese
+apple2eeuk
+apple2efr
+apple2ep
+apple2epde
+apple2epfr
+apple2epse
+apple2epuk
+apple2ese
+apple2euk
+apple2gs
+apple2gsmt
+apple2gsr0
+apple2gsr0p
+apple2gsr0p2
+apple2gsr1
+apple2gsr3p
 apple2jp
 apple2p
+applix
+aprfte
+apricot
+apricotxi
+aprpand
+apvxft
+apxena1
+apxeni
+apxenls3
+apxenp2
+apxlsam
+aquarius
+aquarius2
+aquarius_ar
+aquariusp
 aquarush
+ar140
+ar225
+ar260
+ar4glx3
 area51
 area51a
 area51mx
 area51t
 area51ta
+as496
+asc486slc
+asi100b0
+asst128
+ast6000
+ast611
 astrocde
 astrocdl
 astrocdw
+asuscubx
+asuscusc
+asuspolo
+at
+at386
+at386sx
+at486
+at586
+at586x3
+atariabc286
+ataripc1
+ataripc3
+ataripc4
+ataripc5
+atc1415
+atc1425a
+atc1425b
+atm
+atmtb2
+atmtb2plus
+atom
+atombb
+atomeb
+atturbo
+aubam12s2
+aussieby
+autoc15
+auvip800
+av20dev
 avigo
 avigo_de
 avigo_es
 avigo_fr
 avigo_it
+ax150
+ax170
+ax200
+ax200m
+ax230
+ax350
+ax350ii
+ax350iif
+ax370
+ax500
 b128
 b128hp
 b256
 b256hp
 b500
+bam16a0
 bang
 bangj
+basf7120
 basis108
+bay1000c
+bbcb
+bbcb_de
+bbcb_no
+bbcb_us
+bbcbp
+bbcbp128
+bbcm
+bbcm512
+bbcmaiv
+bbcmarm
+bbcmc
+bbcmc_ar
+bbcmet
+bbcmt
 bbh
 bbh2sp
 bbh2spa
@@ -70,6 +296,38 @@ bbustersja
 bbustersu
 bbustersua
 beena
+bi025c
+bk08
+bk8t
+blackbd
+blackbda
+blackbdb
+blackbdu
+blitzs
+bluenote
+bm3
+bm36th
+bm37th
+bm3core
+bm3final
+bmiidx
+bmiidx2
+bmiidx3
+bmiidx3a
+bmiidx3b
+bmiidx4
+bmiidx5
+bmiidx6
+bmiidx6a
+bmiidx7
+bmiidx7a
+bmiidx8
+bmiidxa
+bmiidxc
+bmiidxc2
+bmiidxca
+bmiidxs
+bmiidxsa
 bonanza
 bonanzar2
 borntofi
@@ -79,10 +337,19 @@ bparty
 bpartya
 bpartyb
 bronx
+bruc100
+bruc100a
+btm2105
 bubbletr
 bubbletrj
 buzzundr
+bw12
+bw14
+bw14d
+bw2
+bw230
 bx256hp
+byte
 c116
 c128
 c128_de
@@ -101,6 +368,10 @@ c16_hu
 c16p
 c232
 c264
+c286lt
+c386sx16
+c386sx25
+c386sxlt
 c64
 c64_jp
 c64_se
@@ -113,10 +384,23 @@ c64g
 c64gs
 c64p
 c65
+cadd810
+canonv10
+canonv20
+canonv20e
+canonv20f
+canonv20g
+canonv20s
+canonv25
+canonv30f
+canonv8
+carmarty
 carnevil
 carnevil1
+carnivac
 carnking
 cashcade
+cat
 catch22
 cbm610
 cbm620
@@ -126,26 +410,106 @@ cbm720
 cbm720_de
 cbm720_se
 cbm730
+cd32
+cd32n
+cd6809
+cdtekg2
+cdtv
+cdtvn
 cdx
+cec2000
+cece
+cecg
+ceci
+cecm
+cf1200
+cf2000
+cf2700
+cf2700g
+cf2700uk
+cf3000
+cf3300
+cfa3000
+cfa3000bp
 cgc7900
+cgenie
+cgenienz
+ch48633c
+ch486spm
+ch491e
+ch4slez1
+ch4spi
+champ2
 cheyenne
 chiller
+chn333sc
+cip01
+cip03
+cl28612s
 claybust
 claypign
+clcd
 clipper
 cluedo
 cluedo2
 cluedo2c
 cluedod
 cmi2x
+cmpa286
+cms6502
 cndypuzl
+cobra80
+cobrasp
+coco
+coco2b
+coco2bh
 coco3
 coco3h
 coco3p
+cocoh
 colt
 combat
+comdesk
+comebaby
+compani1
+compc1
+compc10
+compis
+compis2
+comport
+comportii
+comportiii
+comslt286
+comt386
+comt486
+comx35n
+comx35p
 confmiss
 copera
+coppc21
+coppc400
+cp400
+cp400c2
+cp500
+cpc300
+cpc300e
+cpc330k
+cpc400
+cpc400s
+cpc464
+cpc464p
+cpc50a
+cpc50b
+cpc51
+cpc61
+cpc6128
+cpc6128f
+cpc6128p
+cpc6128s
+cpc6128sp
+cpc664
+cpc88
+cpg120
 cracksht
 craft2p
 crimep2
@@ -163,9 +527,28 @@ crszonev3a
 crszonev3b
 crszonev3b2
 crszonev4a
+crvisio2
+crvisioj
+crvision
 cryptklr
+cs8230
+csl286
+ct386sx
+ct486
+ctcc386mx
 cubo
+cx5f
+cx5f1
+cx5m128
+cx5miib
+cx5mu
+cx7128
+cx7m128
+cxsxd
 cyclshtg
+d64plus
+daisy
+dawg
 dcat16
 deathcox
 deathcoxj
@@ -177,22 +560,78 @@ deerhuntc
 deerhuntd
 deerhunte
 deerhuntj
+deluxecoco
 dendy
 dendy2
 desertgu
+dfi386
+dfi386sx
+dgama87
+dgama88
+dgama89
+dgnalpha
+dgnmsx
+dgone
+didakm91
+didakm92
+didakm93
+didakt90
+didaktk
 dimtouch
+discmate
+discmon
+dmv
 dodo
 downhill
 downhillu
 dpb7000
+dpc100
+dpc180
+dpc200
+dpc200e
 dragngun
 dragngunj
+dragon200
+dragon200e
+dragon32
+dragon64
+dragon64h
 dreamwv
 drpcjr
 ds2
+dslayrr
+dslayrra
+dsys200
+dt386
+dt486
+dtkerso
 duckhunt
+dvbslan
+dw225
 dx64
+eagle1600
+eaglepc2
+eaglespirit
+earthst
+ec1840
+ec1841
+ec1842
+ec1845
+ec1847
+ec1849
+ec4913
+ec4915aio
+econx25
+ecs38632
+ecs386a
+ecs8517
+ecsfx3000
+ecssi5pi
+ecsum386
+ed486vl3h
+edmv035f
 edu64
+eg3003
 eggventr
 eggventr1
 eggventr2
@@ -204,9 +643,52 @@ eggventrd
 ehrgeiz
 ehrgeizja
 ehrgeizua
+einst256
+einstein
+elanht286
 eldoralg
+electron
+electron64
+electronsp
+electront
 elppa
+elt286b
+elt386sx
+eltp9
+elwro800
+ep128
+ep64
+epc
+eppc
+epsax
+epsax2e
+epsax3
+euroat
+europc
+europc2
+euroxt
+ev1806
+ev1815
 evilngt
+ews286
+excali64
+exp4044
+expert10
+expert11
+expert13
+expert20
+expert3i
+expert3t
+expertac
+expertdp
+expertdx
+expertpl
+ez2d2m
+f1
+f10
+f1e
+f2
+f4dxluc4
 falcon30
 falcon40
 famibox
@@ -219,17 +701,83 @@ fashiong
 fashiong2
 fastdraw
 fastdraw_130
+fc100
 fctitler
+fdpc200
 fds
+fellow
 ferieki
 feriepu
 feriewt
 fgtlayer
 fgtlayerja
+fic4386vchd
+fic4386vcv
+fic486gvt
+fic486kvd
+fic486vchd
+ficeli6ii
+ficgiovt2
+ficpio2
+ficvipio
+ficvipio2
+ficvt503
 finfurl
 finfurl2
 finfurl2j
+fm11
+fm16beta
+fm7
+fm7740sx
+fm77av
+fm8
+fmnew7
+fmtmarty
+fmtmarty2
+fmtowns
+fmtownsftv
+fmtownshr
+fmtownsmx
+fmtownssj
+fmtownsux
+fmtownsv03
+fmx
+fnvision
+fp
+fp1000
+fp1100
+fp6000
+fpc500
+fpc900
+fraking
+frx386c
+frxc402
+fs1300
+fs4000
+fs4000a
+fs4500
+fs4600f
+fs4700f
+fs5000f2
+fs5500f1
+fs5500f2
+fsa1
+fsa1a
+fsa1f
+fsa1fm
+fsa1fx
+fsa1gt
+fsa1mk2
+fsa1st
+fsa1wsx
+fsa1wx
+fsa1wxa
+fspc800
 fstation
+fstm1
+ft486f55
+ftsserv
+fu340
 funcube
 funcube2
 funcube3
@@ -238,21 +786,40 @@ funcube5
 funlddlx
 g13jnr
 g13knd
+ga486am
+ga486vf
+ga486vs
+ga6la7
 gallgall
 gallgall_21
+gamecst2
+gamecstl
 gamegeaj
 gamegear
+gammagic
+gc10a
 gchinatv
 gdfs
 gen_nomd
 genesis
 genesis_tmss
 genmagi
+ges9051n
+gete486vl
+gfc1080
+gfc1080a
 ghlpanic
 ghoshunt
+gmb486sg
+gmb486unp
+gmfamily
 golgo13
 gollygho
+gq863
 greatgun
+gs611606a
+gsfc200
+gsfc80u
 gtfore01
 gtfore02
 gtfore03
@@ -280,12 +847,69 @@ gunwars
 gunwarsa
 hammer
 haremchl
+hawaii
+hb10
+hb101
+hb101p
+hb10p
+hb201
+hb201p
+hb20p
+hb501p
+hb55
+hb55d
+hb55p
+hb701fd
+hb75
+hb75d
+hb75p
+hb8000
+hbf1
+hbf1ii
+hbf1xd
+hbf1xdj
+hbf1xv
+hbf5
+hbf500
+hbf500_2
+hbf500f
+hbf500p
+hbf700d
+hbf700f
+hbf700p
+hbf700s
+hbf900
+hbf900a
+hbf9p
+hbf9pr
+hbf9s
+hbg900ap
+hbg900p
+hc128
+hc2000
+hc5
+hc6
+hc7
+hc85
+hc88
+hc90
+hc91
+headg2
 hellngt
+hhtiger
 hidctch3
 hitnmiss
 hitnmiss2
 hkc8800a
 hogalley
+hot304
+hot307h
+hot409
+hot419
+hot433
+hotbi13b
+hotbi13p
+hotbit20
 hotd
 hotd2
 hotd2e
@@ -293,41 +917,172 @@ hotd2o
 hotd2p
 hotdo
 hotdp
+hp95lx
 hp9845c
 hp9845c_de
 hp9845t
 hp9845t_de
+hstrtpls
+ht108064
+ht1080z
+ht1080z2
+ht12a
+ht18c
+hwparty
+hx10
+hx10d
+hx10dp
+hx10e
+hx10f
+hx10s
+hx10sa
+hx20
+hx20e
+hx20i
+hx21
+hx21f
+hx22
+hx22i
+hx23
+hx23f
+hx32
+hx33
+hx34
+hx51i
+hydrthnd
+hydrthnd100d
+hydrthnd101b
+hyo88t
+hyu16t
+hyu16te
+i8530286
+i8530h31
+i8535043
+i8550021
+i8550061
+i8555081
+i8580071
+i8580111
+ibm2011
+ibm2011rd
+ibm2121
+ibm2121rd
+ibm2123
+ibm2133
+ibm5140
+ibm5150
+ibm5155
+ibm5160
+ibm5162
+ibm5170
+ibm5170a
+ibmpcjr
+ibmpcjx
+icldrsm40
+ilm396b
+imds2
+indigo2_4415
+indy_4610
+indy_4613
+indy_5015
 invasnab
 invasnab3
 invasnab4
+inves
 iq501
 iq502
+isa386c
+isa386u30
+isbc286
+isbc2861
+isbc28612
+iskr1030m
+iskr1031
+iskr3104
 iteagle
+ittxtra
 ivelultr
+jakms41
+jb3000
 jd363
 jd364
 jd368
 jdredd
 jdreddb
+jet
 jnero
 jorn720
 jpark3
 jpark3u
+jtc
+jtces23
+jtces40
+jtces88
+juko16
+juko8
+jupace
+jvchc7gb
+jwj403tg
+jwj446a
+k286i
 kaiunqz
 kartduel
 kartduelja
+kaypro1
+kaypro10
+kaypro1084
+kaypro16
+kaypro284
+kaypro2x
+kaypro484
+kaypro484p88
+kaypro4x
+kayproii
+kayproiip88
+kayproiv
+kaypronew2
+kaypropc
+kc85
+kccomp
 kdeadeye
+kma202f
+kma300g
+kmc5000
+kontiki
+kontur
+korvet
+kt216wb5
+ktx20t02
 kyhaton
+kyoxt
+las128e2
+las128ex
+laser110
+laser128
+laser128o
+laser200
+laser210
 laser2c
+laser310
+laser310h
+laser350
+laser500
+laser700
+laser_turbo_xt
+laser_xt3
 laseract
 laseractj
+lasr2001
 lasstixx
 lastbh
 lastbh_006
 lbgrande
+lbpc
 le2
 le2j
 le2u
+ledgmodd
+ledgmodm
 lethalen
 lethaleneaa
 lethaleneab
@@ -343,6 +1098,9 @@ lghostd
 lghostj
 lghostu
 lghostud
+lion3500
+lm103s
+lnw80
 lockload
 lockloadu
 loffire
@@ -355,13 +1113,29 @@ lordgun
 lordgunu
 lostwsga
 lostwsgp
+ls486e
 lsrquiz
 lsrquiz2i
 lsrquizg
+lsucm486v30
+ltmpbp
+ltmpm
 luckywld
 luckywldj
 lupinsho
 lupinshoo
+lzcolor64
+m10
+m21
+m24
+m240
+m250e
+m290
+m5
+m55hipl
+m5p
+m5p_brno
+m79152pc
 m82
 maddog
 maddog2
@@ -370,6 +1144,9 @@ maddog2_110
 maddog2_202
 maddog_202
 maddoga
+magb233
+magb236
+magic6
 magimask
 magimaska
 magimaskb
@@ -379,12 +1156,61 @@ magtcha5a
 magtouch
 mahg156
 maletmad
+manager
+map1010
 marvice
 marvice100hz
+mat286
+matrix
 maxf_102
 maxf_ng
 maxforce
 maxxi
+mb1212c
+mb133340
+mb1433aeap
+mb1433ucv
+mb1433uiv
+mb4d33
+mb8433uud
+mba009
+mba029
+mba032q
+mbc16
+mbc16lt
+mbc18nb
+mbc200
+mbc28
+mbc55x
+mbee
+mbee128
+mbee128p
+mbee256
+mbee56
+mbeeic
+mbeepc
+mbeepc85
+mbeepc85b
+mbeepc85s
+mbeepp
+mbeeppc
+mbeett
+mbh1
+mbh1e
+mbh2
+mbh25
+mbh3
+mbh50
+mbh70
+mc1000
+mc1502
+mc1702
+mc200
+mc400
+mc68000
+mcword
+mcword_de
+md4duvc
 mdhorse
 mechatt
 mechattj
@@ -398,6 +1224,22 @@ megacdj
 megadrij
 megadriv
 megajet
+megapc
+megapcpl
+megapcpla
+megast
+megast_de
+megast_fr
+megast_se
+megast_sg
+megast_uk
+megaste
+megaste_de
+megaste_es
+megaste_fr
+megaste_it
+megaste_se
+megaste_uk
 megat
 megat2
 megat2a
@@ -437,16 +1279,47 @@ megat5t
 megat5tg
 megat6
 megat7e
+meritum1
+meritum2
+meritum_net
 mgnumber
 mgprem11
+micral45
+micro88
+microbx2
 microeng
+mijx30gp
 mini2440
+miniforce
+minisys2k
+mistrum
+mk88
+mkp286
+ml8000
+mlf110
+mlf120
+mlf48
+mlf80
+mlfx1
+mlg1
+mlg10
+mlg3
+mlg30
+mlg30_2
+mmbo4088
+mmr4000be
+mmr4000le
 mo5
 mo5e
 mo5nr
 mo6
 mocapglf
 mok
+mokp386
+mokp386sx
+mom3v3
+mononuxt
+mononuxt2
 monoplcl
 monoplcld
 monopldx
@@ -462,8 +1335,35 @@ motoxgov1a
 motoxgov1a2
 motoxgov2a
 motoxgov2a2
+mpc10
+mpc100
+mpc1600
+mpc200
+mpc200sp
+mpc2300
+mpc2500f
+mpc25fd
+mpc25fs
+mpc27
+mpc64
+mpc800
+mpc900
+mpc900gx
+mpf1_88
+mpf2
+mprof3
+mpu9088vf
+mpx16
 mrdrillr
 mrdrillrja2
+ms1600
+ms4125
+ms4132
+ms4134
+ms4138
+ms4144
+ms4145
+ms68k
 msm3
 mtchxl5k
 mtchxl5ko
@@ -477,22 +1377,106 @@ mtchxlti
 mtjpoker
 mtouchxl
 mtu130
+mtx500
+mtx512
 multmega
+mx10
+mx101
+mx15
+mx1600
+mx64
+mx83c305
+myb3k
+mz1500
+mz2500
+mz2520
+mz800
+n8810m15
+n8810m16c
+n8810m16v
+n8810m20
+n8810m30
+n8810m55
+nabupc
+nat48pv
+nc100
+nc100de
+nc100dk
+nc100sv
+nc150fr
+nc150it
+nc200
+ncr3302
+ncr3433
+ncrpc4i
+ncrpc6
+ncrpc8
+neat
+necapciv
+neiva
 nes
 nesm8
 nesm8a
 nesm8b
 nespal
 nevada
+nforcepc
+nimbus
+nixpc01
+nms801
+nms8220
+nms8245
+nms8245f
+nms8250
+nms8250_16
+nms8250_19
+nms8255
+nms8255f
+nms8260
+nms8280
+nms8280f
+nms8280g
+nms9100
+npc8300
 nstocker
 nstockera
 nycaptor
+o286foxii
+ocfoxm
+ochawk
+ochipcom
+ochipdca2
+ochipvlp
+ocjagii
+ocjagv
+ocpanii
+octekg2
+ocxt286
 odeontw
 odeontw2
+odyssey
+offrthnd
 ohbakyuun
+oligam
+olim203
+olivm15
+olivpc1
+olyport40
+olystar20f
+olytext30
+omni2
+omni4
 omv1000
 omv2000
 oneshot
+op386wb
+op82c283
+op82c291
+op82c381
+op82c391
+op82c392
+opti495slc
+opti495xlc
 opwolf
 opwolf3
 opwolf3j
@@ -503,8 +1487,14 @@ opwolfj
 opwolfjsc
 opwolfp
 opwolfu
+oric1
+orica
+orizon
+p386dx40
+p386sx25pw
 p500
 p500p
+p5txla
 p911
 p9112
 p911ac
@@ -536,6 +1526,8 @@ partygrsb
 pballpup
 pbst30
 pbst30a
+pc
+pc10iii
 pc1512
 pc1512dd
 pc1512hd10
@@ -544,12 +1536,81 @@ pc1640
 pc1640dd
 pc1640hd20
 pc1640hd30
+pc20
+pc200
+pc2086
+pc2386
+pc3086
+pc30iii
+pc40iii
+pc45iii
+pc5086
+pc50ii
+pc6001
+pc6001a
+pc6001mk2
+pc6001mk2sr
+pc60iii
+pc6601
+pc6601sr
+pc7000
+pc70iii
+pc8001
+pc8001mk2
+pc8001mk2sr
+pc8201
+pc8201a
+pc8801
+pc8801fa
+pc8801ma
+pc8801ma2
+pc8801mc
+pc8801mh
+pc8801mk2
+pc8801mk2fr
+pc8801mk2mr
+pc8801mk2sr
+pc88va
+pc88va2
+pc9486
 pc_duckh
 pc_hgaly
 pc_wgnmn
+pcb303
+pccm205
+pccm209
+pccm216
+pccm317
+pccm321
+pccm326
+pccm396f
+pccm912
+pccm915i
+pccm919
+pcd2
+pcd204
+pcd2m
+pcd3nsl
+pcd3nsx
+pcd4nd
+pcd4nl
+pcd4x
+pce
+pcega
+pcherc
+pci48af
+pciagp
+pcipc
+pcipcs7
+pck486dx
+pcmda
+pcv20
+pcvga
+pcw16
 pda600
 pdc150t
 pdc40t
+peas286
 peke0004
 peke0004a
 peke0004b
@@ -563,10 +1624,43 @@ peke1012a
 peke1012b
 peke1013
 peke1013a
+pem2530
+pencil2
+pentevo
+perfect1
 pet64
 pex0006k
 pex0013k
 pex0013ka
+pf2012
+pg750
+pg750eisa
+phc2
+phc23
+phc23jb
+phc25
+phc25j
+phc28
+phc28l
+phc28s
+phc35j
+phc55fd2
+phc64
+phc70fd
+phc70fd2
+phc77
+photoply2k
+photoply2k1it
+photoply2k1mtnl
+photoply2k1nl
+photoply2k2be
+photoply2k4
+photoply2knl
+photoply2ksp
+photoply98sp
+photoply99nl
+photoply99sp
+php3239
 pickydis
 pickytlk
 pico
@@ -574,23 +1668,78 @@ picoj
 picou
 pilot1k
 pilot5k
+piopx7
+piopx7uk
+piopxv60
+pk88
+pkm0038s
 plets300
 plets350
 plus4
 plus4p
+pm486pu
+pn8800
 pntnpuzl
+pocketbk
+pocketbk2
+pofo
+poisk1
+poisk2
 policetr
 policetr10
 policetr11
 policetr13
 policetr13a
 policetr13b
+pp
+ppc512
+ppc640
+ppm3333p
 ppsatan
 prav82
+prav8c
+prav8d
+prav8dd
 prav8m
+primoa32
+primoa48
+primoa64
+primob32
+primob48
+primob64
+primoc64
 princ
 pro128
+pro128s
+prof180x
+prof181x
+prof80
+profpc33
+prolite286
+proteus
+przonegd
+psi98
+psion3
+psion3a
+psion3a2
+psion3a2_de
+psion3a2_it
+psion3a2_ru
+psion3a2_us
+psion3c
+psion3mx
+psion3mx_fr
+psion3s
 psion5mx
+psionhc100
+psionhc110
+psionhc120
+pt319a
+pt430
+pt432b
+pt581392
+pt68k2
+pt68k4
 ptblank
 ptblank2
 ptblank2a
@@ -599,31 +1748,106 @@ ptblank2c
 ptblank2ua
 ptblank3
 ptblanka
+ptmb457
+pumpipx2
+pumpipx2p
+pumpipx3
+pumpipx3a
+pumpipx3b
+pumpit1
+pumpit2
+pumpit2a
+pumpit3
+pumpit3a
+pumpit8
+pumpitc
+pumpite
+pumpitea
+pumpito
+pumpitp2
+pumpitp3
+pumpitp3a
+pumpitpc
+pumpitpr
+pumpitpru
+pumpitpx
+pumpitup
+pv16
+pv7
+pwaih4077c
+pwaih4077d
+pwb7270e
+px4
+px486p3
+px4p
+pyuuta
+pyuutajr
+qdu386dx
+qi600
+qi900
+ql
+ql_de
+ql_dk
+ql_es
+ql_fr
+ql_gr
+ql_it
+ql_se
+ql_us
 qnilemax
+quake
 quickjac
+quorum48
+qvt70
+qvt82
+qx10
 raceon
 raceonj
+radionic
+rameses
 rapidfir
 rapidfira
 rapidfire
 rapidrvr
 rapidrvrp
 rapidrvrv2c
+rasce
+rc759
 rchase
 rchasej
 rchasejb
 realbrod
 realbroda
+reutapm
 rex6000
+rfmpb
+rfmpbr2
 roadrunm
+robie
+rs128
+rtpc010
+rtpc015
+rtpc020
+rtpc025
+rtpca25
+sage2
+samcoupe
+samdm286
+santacl
+santaka2
+sarcpc
 sb486
 sc3000
 sc3000pal
+scamp386sx
 scrabble
 scrabbled
+scsxaio
 segaai
 segacd
 segacd2
+sergeysxt
+sf7000
 sg1000
 sg1000m2
 sg1000m3
@@ -631,14 +1855,33 @@ sgunner
 sgunner2
 sgunner2j
 sgunnerj
+sgx
+sh386sx20
+shine
 shootgal
 shoottv
 showdown
 showdown4
 shtngmst
 shtzone
+shutms11
+sicpc1605
+siena
+sintez2
+sis85c471
+sis85c496
+sisrabb
+sist1
 skattv
 skattva
+slvrball632
+slvrball720
+slvrball806
+slvrballbu409
+slvrballbu409b
+sm38640f
+sm48650usc
+smih0107
 sms
 sms1
 sms1br
@@ -657,6 +1900,17 @@ smssdisp
 snes
 snespal
 snlad
+snomi286
+so025d2
+so025k2
+so025r2
+so30h
+so4saw2
+sorcerer
+sorcerer2
+sorcerera
+sorcererb
+sorcererd
 soulclbr
 soulclbrab
 soulclbrac
@@ -668,17 +1922,38 @@ soulclbruc
 space84
 spacepir
 spacepir_14
+spc1000
+spc1500
+spc400d
+spc800
+spec128
+spec80k
 specfrce
 specfrceo
+specide
+specpls2
+spectred
+spectrum
+spektrbk
+sprinter
 spt1500
 spt1700
 spt1740
+ssam88s
 sshooter
 sshooter11
 sshooter12
 sshooter17
 sshot
 sshota
+st
+st_de
+st_es
+st_fr
+st_nl
+st_se
+st_sg
+st_uk
 ste
 ste_de
 ste_es
@@ -687,23 +1962,82 @@ ste_it
 ste_se
 ste_sg
 ste_uk
+step3
+stepone
+stepstag
+sto486wb
 streetg
 streetg2
 streetg2r5
 streetgr3
 stvboy
+suntac303
+suntac6
+super80
+super80d
+super80e
+super80m
+super80r
+super80v
+svi318
+svi318n
+svi328
+svi328n
+svi728
+svi728es
+svi738
+svi738ar
+svi738dk
+svi738pl
+svi738sp
+svi738sw
 swclone
+swe1pb
 sws2000
 sws2001
 sws98
 sws99
+sx100
+sx16
 sx64
 sx64p
+sy012
+sy019hi
+sybaby386
+sys1121
+sys80
+sys80p
+t1000hx
+t1000rl
+t1000sl2
+t1000sx
+t1000tl
+t1000tl2
+t1000tx
+t2000sx
+t4000
 t9000
+ta1700pc
+tadpc200
+tadpc200a
+tadpc200b
+tam25p2
+tam3340ma0
+tandy102
+tandy200
+tandy2k
+tandy2khd
+tanodr64
+tanodr64h
 targeth
 targeth10
 targetha
 tatacot
+tc2048
+td4ipaio
+td60c
+td70a
+td70n
 technodr
 tekken3
 tekken3a
@@ -721,6 +2055,7 @@ tektagtjb
 tektagtjc1
 tektagtub
 tektagtuc1
+telstrat
 tenkomor
 tenkomorja1
 terabrst
@@ -729,9 +2064,13 @@ terabrstaa
 terabrstj
 terabrstja
 terabrstua
+teradrive
 tesa6240
+tg16
+thinkpad600e
 tickee
 tierras100hz
+tiki100
 timecris
 timecrisa
 timecrs2
@@ -739,6 +2078,10 @@ timecrs2v1b
 timecrs2v2b
 timecrs2v4a
 timecrs2v5a
+tk2000
+tk3000
+tk90x
+tk95
 tm
 tm2k
 tm2ka
@@ -769,8 +2112,12 @@ tm7kmna
 tm7knj
 tm8k
 tm8k902
+tmc600s2
 tmdo
 tmntmutm
+tmpat48av
+tmpat48pg4
+to16
 to7
 to770
 to770a
@@ -779,72 +2126,195 @@ to8d
 to9
 to9p
 tomshoot
+tonto
+toptek286
+torch301
+torch725
+torchf
+torchh
+tosh1000
+tot3200sxc
 totlvica
 totlvice
 totlvicj
 totlvicu
 toukon3
+tower386sx
+towerat2xx
+tpc310
+tpp311
+tps312
 trivialp
 trivialpd
 trivialpo
 trivrus
 trophyh
 trophyht
+trs80dt1
+trs80l2
+trs80m16
+trs80m2
+trs80m3
+trs80m4
+trs80m4p
+trsm100
 truckk
+ts2068
+ts34t25
 tt030
 tt030_de
 tt030_fr
 tt030_pl
 tt030_uk
 turkhunt
+tutor
 tutstomb
+tv990
+tv995
 tvboy
 tvboyii
 tvboyn
+tvc64
+tvc64p
+tvc64pru
+twinnet
+tx8000
+u3911v3
+ucv102
 ujlnow
+uk2086
+um486
+um486v
+um82c481af
+um82c491f
+um82c493f
+um8498f
+um8810paio
+um8886
 undrfire
 undrfirej
 undrfireu
+uni386w
+uni4800
 uniap2en
 uniap2pt
 uniap2ti
+uniwb4407
 uzebox
+v1050
+v286c
 v364
+v4p895p3
 vcop
 vcop2
 vcopa
+vector4
 vectrex
+vg8000
+vg8010
+vg8010f
+vg802000
+vg802020
+vg8020f
+vg8230
+vg8235
+vg8235f
+vg8240
+via4386vio
 vic10
 vic1001
 vic20
 vic20_se
 vic20p
+victhc80
+victhc90
+victhc90a
+victhc95
+victhc95a
+victor9k
 vip64
 virtpool
+vis
 visor
+vjdash
+vjdasha
+vjslap
+vlsi5
+vpcii
 vsfdf
 vsgshoe
+vz200
+vz2000
+vz200de
+vz300
+walk386dx
+walk386sx
+wangpc
 wcombatu
 whodunit
 whodunit8
+wizzard
+wmbullet
+wmbulletf
 wmega
 wmegam2
+wpc250
 wschamp
 wschampa
 wschampb
 wsjr
 wsjr_15
+wy220001
+x68000
+x68030
+x68ksupr
+x68kxvi
+xb42639
+xb42639a
+xb42663
+xb42664
+xb42664a
 xegs
 xeye
+xiprocessor
+xor100
+xtom3d
+y503iiir
+y503iiire
+y503iir
+y503iir2
+y805128
+y805128r2
+y805128r2e
+y805256
+yc64
+yis303
+yis503
+yis503f
+yis503ii
+yis604
 yukon
 yukon1
+z100
+zdsupers
+zdz150
+zdz160
+zdz180
+zdz248
+zeos386sx
 zeropnt
 zeropnt2
 zeropnta
 zeropntj
+zi4dvs
+zidav630e
+zijini
+zito4dps
 zombraid
 zombraidp
 zombraidpj
 zoomer
+zorba
 zortonbr
 zortonbr_100
+zvezda
