--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -1560,6 +1560,7 @@ bagnard
 bagnarda
 bagnardi
 bagnardio
+baibians
 baile
 bakubaku
 bakubrkr
@@ -2610,6 +2611,7 @@ cadashj1
 cadashjo
 cadashp
 cadashs
+cadashso
 cadashu
 cadashu1
 cafebrk
@@ -2631,6 +2633,7 @@ cameltrya
 cameltryau
 cameltryj
 cameltryu
+camirf1
 camlight
 can09
 canaryrc
@@ -3092,17 +3095,26 @@ cityslck
 cj3play
 cjbj
 cjddz
+cjddz213cn
 cjddz215cn
 cjddz217cn
 cjddzlf
 cjddzp
+cjddzps
+cjddzs
+cjddzsa
 cjddzsp
 cjdh2
 cjdh2a
 cjdh2b
 cjdh2c
+cjdlz
+cjdn
 cjffruit
+cjlddz
+cjmx
 cjplus
+cjsjh
 cjslh
 cjsll
 cjtljp
@@ -3627,6 +3639,8 @@ crossmg2
 croupier
 croupiera
 croupierb
+crownpkr
+crsauruss
 crsbingo
 crshrace
 crshrace2
@@ -3777,6 +3791,7 @@ csprintg1
 csprints
 csprints1
 csret
+css11501sk9
 cstlevna
 csuperas
 csv1_qps
@@ -3940,6 +3955,7 @@ d9final
 d9flower
 dacholer
 dadandrn
+dafuwng3
 dagenta6
 dagz80
 dai2kaku
@@ -4717,7 +4733,6 @@ dphh8630
 dphl
 dphla
 dphljp
-dphlunka
 dphlunkb
 dplay
 dpoker
@@ -4841,8 +4856,8 @@ drtoppelj
 drtoppelu
 drumsta
 drumsups
-drw80pk2
 drw80pkr
+drw80wld
 drwrt100
 drwrt200
 drwrt400
@@ -8036,6 +8051,7 @@ gnbarich
 gng
 gnga
 gngbl
+gngbla
 gngblita
 gngc
 gngprot
@@ -8965,6 +8981,7 @@ hg_frd
 hginga
 hgkairak
 hglbtrtr
+hgly
 hgokbang
 hgokou
 hgokoua
@@ -9214,6 +9231,7 @@ hpz80unk
 hrclass
 hrdtimes
 hrdtimesa
+hrtantny
 hrtthrob
 hs36blk
 hs36red
@@ -9227,6 +9245,7 @@ hsf2j
 hsf2j1
 hsf2j2
 hshavoc
+hsheng2
 hshot_p8
 hspot2
 hspot3
@@ -9244,8 +9263,12 @@ hthero95u
 htheroj
 htherou
 httip_l1
+huahuas2
+huahuas2a
+huahuas5
 huhimage
 hulk
+huluw2
 humlan
 hummerxt
 hunchbak
@@ -11194,7 +11217,11 @@ jigkmgri
 jigkmgria
 jin
 jingling
+jinhuang
 jinhulu2
+jinhulu2100gi
+jinhulu2101is
+jinhulu2120gi
 jinpaish
 jitsupro
 jituroku
@@ -11756,6 +11783,7 @@ kov3hd102
 kov3hd103
 kov3hd104
 kov7sprt
+kovgsyx
 kovlsjb
 kovlsjba
 kovlsqh
@@ -11763,7 +11791,6 @@ kovlsqh2
 kovplus
 kovplusa
 kovqhsgs
-kovqhsgs302
 kovsgqyz
 kovsgqyza
 kovsgqyzb
@@ -12092,6 +12119,8 @@ lhzb4
 lhzb4dhb
 lhzba
 lhzbgqb
+lianhp2
+lianhp3
 liberate
 liberateb
 liberatr
@@ -20397,6 +20426,7 @@ memlane
 memoquiz
 memorymoog
 menghong
+menghonga
 mentor16
 meosism
 mephisto
@@ -20563,6 +20593,7 @@ mice2_6502
 mice2_6809
 mice2_8085
 mice2_z80
+mice3s68k
 mice_6502
 michigan
 michkit1
@@ -20707,6 +20738,7 @@ mjdiplob
 mjegolf
 mjelct3
 mjelct3a
+mjelct3bl
 mjelctrb
 mjelctrn
 mjembase
@@ -20738,6 +20770,8 @@ mjmyornt
 mjmyorntr
 mjmyster
 mjmyuniv
+mjmyunivbl
+mjmyunivbl2
 mjmywrld
 mjnanpaa
 mjnanpas
@@ -20748,6 +20782,7 @@ mjnquestb
 mjprivat
 mjreach
 mjreach1
+mjreacha
 mjreachbl
 mjreachp2
 mjschuka
@@ -21130,6 +21165,7 @@ mrtnt
 mrviking
 mrvikingj
 mrwoo
+mrwoou
 ms14
 ms3
 ms5
@@ -21302,6 +21338,7 @@ mtlchampa
 mtlchampj
 mtlchampu
 mtlchampu1
+mtonic2
 mtrain
 mtraina
 mtrainnv
@@ -21317,6 +21354,7 @@ mtwins
 mtwinsb
 mugsmash
 multchmp
+multchmp25
 multchmpa
 multchmpk
 multgmxl
@@ -21391,6 +21429,9 @@ mv1sfx
 mv1sfx2
 mv1sfxa
 mv1wc
+mv3100m10
+mv3400
+mv3500
 mv4in1
 mvbfree
 mvme162
@@ -22037,6 +22078,7 @@ optiger
 optigera
 optigerj
 optigersm
+optomaxv
 opwolf
 opwolf3
 opwolf3j
@@ -23805,6 +23847,7 @@ powerinsj
 powerinspj
 powerinspu
 powernin
+powerpack
 powerstk
 powj
 powrplay
@@ -24241,6 +24284,7 @@ qgakumon
 qgh
 qgundam
 qhzb
+qiji6
 qiwang
 qix
 qix2
@@ -24324,6 +24368,7 @@ queenbee
 queenbeeb
 queenbeei
 queenbeesa
+queenbn
 queenotg
 questarm
 quester
@@ -24368,6 +24413,7 @@ qvt70
 qvt82
 qwak
 qwakttl
+qyjdzjp
 qzchikyu
 qzkklgy2
 qzkklogy
@@ -31220,6 +31266,7 @@ seawolf2
 seawolfa
 seawolfo
 seawolft
+secoinsa20
 secolove
 secondch
 secretab
@@ -31300,6 +31347,7 @@ sexyboom
 sexygal
 sexyparo
 sexyparoa
+sexyparoebl
 sf
 sf2
 sf2acc
@@ -31917,6 +31965,7 @@ slc1
 sldeluxe
 sleicpin
 slepachi
+sleyuan
 slikshot
 slikshot16
 slikshot17
@@ -33237,6 +33286,8 @@ sst
 sstar
 sstar28k
 sstar97
+sstar97a
+sstar97jb
 sstarbtl
 sstarcrs
 sstingry
@@ -33665,6 +33716,7 @@ suratka
 suratkj
 sureshop
 sureshot
+sureshoto
 surfnsaf
 surfplnt
 surfplnt20
@@ -33975,6 +34027,7 @@ tchess
 tcl
 tcobra2
 tcobra2u
+tct2p
 td831
 tdawg_l1
 tdbingo
@@ -34607,6 +34660,7 @@ todruaga
 todruagao
 todruagas
 toffy
+toffya
 togenkyo
 toggle
 toki
@@ -35044,6 +35098,7 @@ tubepb
 tugboat
 tumbleb
 tumbleb2
+tumblebed
 tumblep
 tumblepba
 tumblepj
@@ -35073,6 +35128,8 @@ turbosubc7
 turbosubc8
 turbotag
 turkhunt
+turnierd
+turnierda
 turpin
 turpinnv
 turpins
@@ -35334,6 +35391,8 @@ usvsthem
 utoukond
 uts10
 uts20
+uvax1
+uvax2
 uvw1200
 uvw1600
 uvw1800
@@ -36429,6 +36488,7 @@ wiz
 wizard
 wizatron
 wizdfire
+wizdfirea
 wizdfireu
 wizt
 wizta
@@ -36487,6 +36547,7 @@ wldwitchu
 wldwitchv
 wlsair60
 wlstar
+wlzb
 wmatch
 wmg
 wms
@@ -36550,6 +36611,7 @@ wowg
 wownfant
 wownfanta
 wowwg
+wpddz
 wpksoc
 wpksocv2
 wpt_103a
@@ -36713,6 +36775,7 @@ wwitch
 wwjgtin
 wwmarine
 wwmspot
+wwshin
 wxstar4k
 wy100
 wy120
@@ -36847,8 +36910,13 @@ xybots1
 xybotsf
 xybotsg
 xyddz
+xyddzhh
 xymg
+xymga
 xyonix
+xypdk
+xypmd
+xypmda
 y301xl
 y416xl
 y532xl
@@ -37025,6 +37093,7 @@ zslc500
 zslc750
 zslc760
 zt8802
+zuanshiw
 zudugo
 zunknecta
 zunkyou
