update auto/man created ini files (mame0276)

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -62,6 +62,7 @@ elecdet
 eleciq
 epacman2
 epacman2r
+epo_tetr
 esbattle
 esoccer
 estargte
@@ -77,6 +78,7 @@ galaxy2b
 gckong
 gdigdug
 ghalien
+gigapets
 ginv
 ginv1000
 ginv2000
